4.3.4
  - MacOS: update libv8 to 11.5
  - Update wasm_features() detection with new wasm features

4.3.3
  - Fix yet more version comparisons

4.3.2
  - Fix another version comparison issue

4.3.1
 - Fix getRversion() type requested by CRAN

4.3.0
 - MacOS: update libv8 to 11.2
 - Windows: use libv8 version 9.1 on all R >= 4.0, drop support for Win2008/Vista
 - Add feature test for V8_ENABLE_SANDBOX, required by some V8 10.8+ (#144)
 - Unbundle 3rd party JS libs that are only needed for examples.

4.2.2
 - Fix a sanitizer error by avoiding a broken API on NodeJS (#152)
 - You can override build flags by setting V8_PKG_LIBS / V8_PKG_CFLAGS

4.2.1
 - Fix a feature test for NodeJS 18 (#145)

4.2.0
 - Use CXX17 on supported platforms. C++17 is required as of libv8 10.2

4.1.0
 - engine_info() now includes a 'numeric_version' field for easy comparison
 - make js-to-r callback mechanism robust against -DRCPP_USE_UNWIND_PROTECT

4.0.0
 - If a call to ct$eval(),ct$get(), or ct$call() returns a JavaScript promise,
   you can set await = TRUE to wait for the promise to be resolved. It will
   then return the result of the promise, or an error in case the promise is
   rejected.
 - New section about promises in the intro vignette.
 - New function wasm_features() lists the supported WASM capabilities on the
   current installation.
 - Updated static libv8 for Mac and Linux to v8-v8-9.6.180.12
 - Windows ucrt: update libv8 to 9.1.269.38
 - Legacy libv8 versions (3.xx) are no longer supported. Package will still
   build but the examples and vignette now assume support for promises.
 - On Ubuntu, RHEL, and MacOS we now default to DOWNLOAD_STATIC_LIBV8=1 for
   supported architectures (amd64 and arm64). If this fails it will fall back
   on finding a local libv8. Opt-out by setting DISABLE_STATIC_LIBV8=1.

3.6.0
 - Try to give better error message when unable to allocate, probably due to
   hitting the stack limit. Previously we would see 'string conversion failed'